fix bug gap 50px

--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 60px;
+  gap: 50px;
 }
 .header-navigation {
 }
